@@ -2,24 +2,24 @@
 
 case \$1 in
    start)
-    nohup java -Xms512m -Xmx512m -Xmn256m -XX:PermSize=128M -XX:MaxPermSize=256M -jar bboss-rt-${bboss_version}.jar > ${cmd}.log &
-    tail -f ${cmd}.log
+    nohup java ${vm} -jar ${project}-${bboss_version}.jar > ${project}.log &
+    tail -f ${project}.log
      ;;
    stop)
-    java -jar bboss-rt-${bboss_version}.jar  stop
+    java -jar ${project}-${bboss_version}.jar  stop
      ;;
    restart)
-    nohup java -Xms512m -Xmx512m -Xmn256m -XX:PermSize=128M -XX:MaxPermSize=256M -jar bboss-rt-${bboss_version}.jar restart > ${cmd}.log &
-    tail -f ${cmd}.log
+    nohup java ${vm} -jar ${project}-${bboss_version}.jar restart > ${project}.log &
+    tail -f ${project}.log
     ;;
    *)
      echo
      echo "Usage:";
-     echo "  ${cmd} keyword [value1 [value2]] ";
+     echo "  ${project} keyword [value1 [value2]] ";
      echo "  ----------------------------------------------------------------";
-     echo "  start                             -- Start ${cmd}";
-     echo "  stop                              -- stop ${cmd}";
-     echo "  restart                           -- Restart ${cmd}";
+     echo "  start                             -- Start ${project}";
+     echo "  stop                              -- stop ${project}";
+     echo "  restart                           -- Restart ${project}";
      echo "  ----------------------------------------------------------------";
      echo
      ;;
